--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fuel",
+  "name": "fuelprices",
   "version": "0.0.0",
   "dependencies": {},
   "repository": {},
@@ -8,6 +8,7 @@
     "grunt-autoprefixer": "^2.0.0",
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-compass": "^1.0.0",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-connect": "^0.9.0",
     "grunt-contrib-copy": "^0.7.0",
@@ -19,19 +20,13 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-filerev": "^2.1.2",
     "grunt-google-cdn": "^0.4.3",
-    "grunt-karma": "^0.12.0",
     "grunt-newer": "^1.1.0",
     "grunt-ng-annotate": "^0.9.2",
     "grunt-svgmin": "^2.0.0",
     "grunt-usemin": "^3.0.0",
     "grunt-wiredep": "^2.0.0",
-    "jasmine-core": "^2.3.4",
     "jshint-stylish": "^1.0.0",
-    "karma": "^0.13.9",
-    "karma-jasmine": "^0.3.6",
-    "karma-phantomjs-launcher": "^0.2.1",
     "load-grunt-tasks": "^3.1.0",
-    "phantomjs": "^1.9.18",
     "time-grunt": "^1.0.0"
   },
   "engines": {
