--- a/client/bower.json
+++ b/client/bower.json
@@ -9,12 +9,12 @@
     "angular-resource": "^1.3.0",
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
-    "angular-touch": "^1.3.0"
+    "angular-touch": "^1.3.0",
+    "angular-ui-router": "~0.2.15"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0",
     "angular-ui-router": "~0.2.15",
-    "bootstrap": "~3.3.5"
   },
   "appPath": "app",
   "moduleName": "fuelPricesApp"
