--- a/client/bower.json
+++ b/client/bower.json
@@ -14,7 +14,7 @@
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0",
-    "angular-ui-router": "~0.2.15",
+    "angular-ui-router": "~0.2.15"
   },
   "appPath": "app",
   "moduleName": "fuelPricesApp"
