--- a/client/bower.json
+++ b/client/bower.json
@@ -10,11 +10,13 @@
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
-    "angular-ui-router": "~0.2.15"
+    "angular-ui-router": "~0.2.15",
+    "angularjs-slider": "~0.1.25"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0",
-    "angular-ui-router": "~0.2.15"
+    "angular-ui-router": "~0.2.15",
+    "angularjs-slider": "~0.1.25"
   },
   "appPath": "app",
   "moduleName": "fuelPricesApp"
