--- a/client/bower.json
+++ b/client/bower.json
@@ -12,7 +12,8 @@
     "angular-touch": "^1.3.0",
     "angular-ui-router": "~0.2.15",
     "angularjs-slider": "~0.1.25",
-    "font-awesome": "~4.4.0"
+    "font-awesome": "~4.4.0",
+    "angular-bootstrap": "~0.13.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0",
